force-app/main/default/objects/Help_Desk_Ticket__c/fields/Amount_Converted__c.field-meta.xml
<CustomField>
    <fullName>Amount_Converted__c</fullName>
    <formula>if ( Amount__c = 0, NULL,

&quot;$&quot; &amp; text(round(Amount__c,0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount (Converted)</label>
    <type>Text</type>
</CustomField>