force-app/main/default/objects/Help_Desk_Ticket__c/fields/Area_Under_Review__c.field-meta.xml
<CustomField>
    <fullName>Area_Under_Review__c</fullName>
    <label>Area Under Review</label>
    <type>TextArea</type>
</CustomField>