force-app/main/default/objects/Help_Desk_Ticket__c/fields/Booked_Room__c.field-meta.xml
<CustomField>
    <fullName>Booked_Room__c</fullName>
    <label>Booked Room</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>302</fullName>
            </value>
            <value>
                <fullName>314</fullName>
            </value>
            <value>
                <fullName>326</fullName>
            </value>
            <value>
                <fullName>Great Room</fullName>
            </value>
            <value>
                <fullName>Other (Specify in description)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>