force-app/main/default/objects/Help_Desk_Ticket__c/fields/Budget_Source__c.field-meta.xml
<CustomField>
    <fullName>Budget_Source__c</fullName>
    <label>Budget Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>