force-app/main/default/objects/Help_Desk_Ticket__c/fields/Business_Contact__c.field-meta.xml
<CustomField>
    <fullName>Business_Contact__c</fullName>
    <label>Business Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>