force-app/main/default/objects/Help_Desk_Ticket__c/fields/Business_Name_Catering__c.field-meta.xml
<CustomField>
    <fullName>Business_Name_Catering__c</fullName>
    <label>Business Name Catering</label>
    <length>255</length>
    <type>Text</type>
</CustomField>