force-app/main/default/objects/Help_Desk_Ticket__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Help Desk Tickets</relationshipLabel>
    <relationshipName>Help_Desk_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>