force-app/main/default/objects/Help_Desk_Ticket__c/fields/Closed_Tickets__c.field-meta.xml
<CustomField>
    <fullName>Closed_Tickets__c</fullName>
    <formula>if ( isblank( Date_Time_Closed__c ) , 0, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Closed Tickets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>