force-app/main/default/objects/Help_Desk_Ticket__c/fields/Date_Time_Addressed__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Addressed__c</fullName>
    <description>Timestamp of when the help desk ticket status is changed from New to any other picklist option</description>
    <label>Date/Time Addressed</label>
    <type>DateTime</type>
</CustomField>