force-app/main/default/objects/Help_Desk_Ticket__c/fields/Day_of_the_Week__c.field-meta.xml
<CustomField>
    <fullName>Day_of_the_Week__c</fullName>
    <formula>CASE( MOD( datevalue(CreatedDate) - DATE(1900, 1, 7), 7), 0, &quot;Sunday&quot;, 1, &quot;Monday&quot;, 2, &quot;Tuesday&quot;, 3,
&quot;Wednesday&quot;, 4, &quot;Thursday&quot;, 5, &quot;Friday&quot;, 6, &quot;Saturday&quot;,&quot;Error&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day of the Week</label>
    <type>Text</type>
</CustomField>