force-app/main/default/objects/Help_Desk_Ticket__c/fields/Days_to_Address__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Address__c</fullName>
    <formula>floor ( datevalue (  Date_Time_Addressed__c ) - datevalue( Ticket_Opened__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Address</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>