force-app/main/default/objects/Help_Desk_Ticket__c/fields/Days_to_Close__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Close__c</fullName>
    <formula>floor ( datevalue ( Date_Time_Closed__c ) - datevalue( Ticket_Opened__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Close</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>