force-app/main/default/objects/Help_Desk_Ticket__c/fields/Deadline__c.field-meta.xml
<CustomField>
    <fullName>Deadline__c</fullName>
    <label>Deadline</label>
    <type>Date</type>
</CustomField>