force-app/main/default/objects/Help_Desk_Ticket__c/fields/ERC_Event_Format__c.field-meta.xml
<CustomField>
    <fullName>ERC_Event_Format__c</fullName>
    <label>ERC Event Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In-Person</fullName>
            </value>
            <value>
                <fullName>Virtual</fullName>
            </value>
            <value>
                <fullName>Both In-Person and Virtual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>