force-app/main/default/objects/Help_Desk_Ticket__c/fields/ERC_Funds__c.field-meta.xml
<CustomField>
    <fullName>ERC_Funds__c</fullName>
    <label>ERC Funds</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>