force-app/main/default/objects/Help_Desk_Ticket__c/fields/Event_that_Occurred__c.field-meta.xml
<CustomField>
    <fullName>Event_that_Occurred__c</fullName>
    <label>Event that Occurred</label>
    <length>255</length>
    <type>Text</type>
</CustomField>