force-app/main/default/objects/Help_Desk_Ticket__c/fields/Facilities_Ops_Tasks_Completed__c.field-meta.xml
<CustomField>
    <fullName>Facilities_Ops_Tasks_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Facilities &amp; Ops employee tasks completed.</description>
    <label>Facilities &amp; Ops Tasks Completed</label>
    <type>Checkbox</type>
</CustomField>