force-app/main/default/objects/Help_Desk_Ticket__c/fields/Footage_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Footage_Date_Time__c</fullName>
    <label>Footage Date/Time</label>
    <type>DateTime</type>
</CustomField>