force-app/main/default/objects/Help_Desk_Ticket__c/fields/Include_Drinks__c.field-meta.xml
<CustomField>
    <fullName>Include_Drinks__c</fullName>
    <label>Include Drinks</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>