force-app/main/default/objects/Help_Desk_Ticket__c/fields/IT_Tasks_Completed__c.field-meta.xml
<CustomField>
    <fullName>IT_Tasks_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>IT employee tasks completed.</description>
    <label>IT Tasks Completed</label>
    <type>Checkbox</type>
</CustomField>