force-app/main/default/objects/Help_Desk_Ticket__c/fields/Location_Catering__c.field-meta.xml
<CustomField>
    <fullName>Location_Catering__c</fullName>
    <label>Location Catering</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>237</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>