force-app/main/default/objects/Help_Desk_Ticket__c/fields/Location_Catering_Other__c.field-meta.xml
<CustomField>
    <fullName>Location_Catering_Other__c</fullName>
    <label>Location Catering Other</label>
    <length>100</length>
    <type>Text</type>
</CustomField>