force-app/main/default/objects/Help_Desk_Ticket__c/fields/MarComms_Tasks_Completed__c.field-meta.xml
<CustomField>
    <fullName>MarComms_Tasks_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MarComms employee tasks completed.</description>
    <label>MarComms Tasks Completed</label>
    <type>Checkbox</type>
</CustomField>