force-app/main/default/objects/Help_Desk_Ticket__c/fields/Number_of_Guests__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Guests__c</fullName>
    <label>Number of Guests</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>