force-app/main/default/objects/Help_Desk_Ticket__c/fields/Opened_on_What_Day__c.field-meta.xml
<CustomField>
    <fullName>Opened_on_What_Day__c</fullName>
    <formula>CASE( WEEKDAY( DATEVALUE( Ticket_Opened__c ) ),
   1, &quot;Sunday&quot;,
   2, &quot;Monday&quot;,
   3, &quot;Tuesday&quot;,
   4, &quot;Wednesday&quot;,
   5, &quot;Thursday&quot;,
   6, &quot;Friday&quot;,
   7, &quot;Saturday&quot;,
   &quot;None&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opened on What Day</label>
    <type>Text</type>
</CustomField>