force-app/main/default/objects/Help_Desk_Ticket__c/fields/Opened_Tickets__c.field-meta.xml
<CustomField>
    <fullName>Opened_Tickets__c</fullName>
    <description>Power of One formula</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Opened Tickets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>