force-app/main/default/objects/Help_Desk_Ticket__c/fields/Owner_Running_User__c.field-meta.xml
<CustomField>
    <fullName>Owner_Running_User__c</fullName>
    <formula>if (OwnerId = $User.Id, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Running User</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>