force-app/main/default/objects/Help_Desk_Ticket__c/fields/Progress_Note__c.field-meta.xml
<CustomField>
    <fullName>Progress_Note__c</fullName>
    <description>Field to input the most recent progress note</description>
    <label>Progress Note</label>
    <length>2555</length>
    <type>LongTextArea</type>
</CustomField>