force-app/main/default/objects/Help_Desk_Ticket__c/fields/Projector_and_Screen_Needed__c.field-meta.xml
<CustomField>
    <fullName>Projector_and_Screen_Needed__c</fullName>
    <label>Projector and Screen Needed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>