force-app/main/default/objects/Help_Desk_Ticket__c/fields/Request_Escalation_Support__c.field-meta.xml
<CustomField>
    <fullName>Request_Escalation_Support__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field for internal Tech Team staff to request manager support on a help desk ticket</description>
    <inlineHelpText>Triggers an escalation request</inlineHelpText>
    <label>Request Escalation/Support</label>
    <type>Checkbox</type>
</CustomField>