force-app/main/default/objects/Help_Desk_Ticket__c/fields/Resolution__c.field-meta.xml
<CustomField>
    <fullName>Resolution__c</fullName>
    <description>Field to detail how the case was solved and/or handled.</description>
    <label>Resolution</label>
    <length>2550</length>
    <type>LongTextArea</type>
</CustomField>