force-app/main/default/objects/Help_Desk_Ticket__c/fields/Room_Layout__c.field-meta.xml
<CustomField>
    <fullName>Room_Layout__c</fullName>
    <label>Room Layout</label>
    <type>TextArea</type>
</CustomField>