force-app/main/default/objects/Help_Desk_Ticket__c/fields/Salesforce_Tasks_Completed__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Tasks_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Salesforce employee tasks completed.</description>
    <label>Salesforce Tasks Completed</label>
    <type>Checkbox</type>
</CustomField>