force-app/main/default/objects/Help_Desk_Ticket__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Working</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
                <label>Pending (Waiting On Requester Response)</label>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Deferred</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Closed - Moved to Project (Active)</fullName>
            </value>
            <value>
                <fullName>Closed - Moved to Project (Inactive)</fullName>
            </value>
            <value>
                <fullName>Hold</fullName>
            </value>
            <value>
                <fullName>With Craftsman</fullName>
            </value>
            <value>
                <fullName>Closed - Incomplete</fullName>
            </value>
            <value>
                <fullName>With NIE</fullName>
            </value>
            <value>
                <fullName>Closed - Moved to Project</fullName>
                <isActive>false</isActive>
                <label>Closed - Moved to Project</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>