force-app/main/default/objects/Help_Desk_Ticket__c/fields/Submitted_By_Summary__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By_Summary__c</fullName>
    <formula>if(not(isblank(User__c)), User__r.Full_Name__c, Web_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Submitted By, Summary</label>
    <type>Text</type>
</CustomField>