force-app/main/default/objects/Help_Desk_Ticket__c/fields/Ticket_Category__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Category__c</fullName>
    <label>Ticket Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Assistance with Conference Room Setup (meeting tech planning, projectors)</fullName>
            </value>
            <value>
                <fullName>Assistance with Copy Machines or Printers</fullName>
            </value>
            <value>
                <fullName>Assistance with Doors Security (key fobs, door hours, security cameras)</fullName>
                <label>Assistance with Doors Security (key fobs, door hours)</label>
            </value>
            <value>
                <fullName>Assistance with Zoom, Teams</fullName>
            </value>
            <value>
                <fullName>Broken Hardware</fullName>
            </value>
            <value>
                <fullName>Business Cards</fullName>
            </value>
            <value>
                <fullName>Cara Website Issue</fullName>
                <color>#EFAE73</color>
                <label>Cara Website Issue</label>
            </value>
            <value>
                <fullName>Catering Only</fullName>
            </value>
            <value>
                <fullName>Certificate/Worksheet Merges or Photo Uploads</fullName>
                <color>#6600CC</color>
                <label>Certificate/Worksheet Merges or Photo Uploads</label>
            </value>
            <value>
                <fullName>Conference Room Tech Assistance</fullName>
            </value>
            <value>
                <fullName>Connectivity (VPN/Shared Drive)</fullName>
                <color>#66FF99</color>
                <label>Connectivity (VPN/Shared Drive)</label>
            </value>
            <value>
                <fullName>Data Maintenance</fullName>
                <color>#333399</color>
                <label>Data Maintenance</label>
            </value>
            <value>
                <fullName>Desk Move Request</fullName>
            </value>
            <value>
                <fullName>Documentation Support</fullName>
                <color>#33FF33</color>
                <label>Documentation Support</label>
            </value>
            <value>
                <fullName>Event Feedback</fullName>
            </value>
            <value>
                <fullName>Event Idea</fullName>
            </value>
            <value>
                <fullName>Facilities Cleanup</fullName>
            </value>
            <value>
                <fullName>Facilities Maintenance</fullName>
            </value>
            <value>
                <fullName>Facilities Tech Assistance</fullName>
            </value>
            <value>
                <fullName>Fill Out a Customer/Vendor Form</fullName>
            </value>
            <value>
                <fullName>Interested in Joining or Learning More</fullName>
            </value>
            <value>
                <fullName>Interested in Leading an Event</fullName>
            </value>
            <value>
                <fullName>Marketing Materials Custom</fullName>
            </value>
            <value>
                <fullName>Marketing Materials Reorder</fullName>
            </value>
            <value>
                <fullName>New Hire, Employee Termination, or Employee Update</fullName>
                <color>#33CC00</color>
                <label>New Hire, Employee Termination, or Employee Update</label>
            </value>
            <value>
                <fullName>Office Equipment Request</fullName>
            </value>
            <value>
                <fullName>Office Supplies Request</fullName>
            </value>
            <value>
                <fullName>Other - Facilities</fullName>
            </value>
            <value>
                <fullName>Other - Finance</fullName>
            </value>
            <value>
                <fullName>Other - IT</fullName>
                <color>#0B24BE</color>
                <label>Other - IT</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>