force-app/main/default/objects/Help_Desk_Ticket__c/fields/Ticket_Opened__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Opened__c</fullName>
    <formula>if ( isnull(Date_Time_Opened__c), CreatedDate, Date_Time_Opened__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date/Time Opened</label>
    <type>DateTime</type>
</CustomField>