force-app/main/default/objects/Help_Desk_Ticket__c/fields/Time_Food_Ready__c.field-meta.xml
<CustomField>
    <fullName>Time_Food_Ready__c</fullName>
    <label>Time Food Ready</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>7:00 AM</fullName>
            </value>
            <value>
                <fullName>7:15 AM</fullName>
            </value>
            <value>
                <fullName>7:30 AM</fullName>
            </value>
            <value>
                <fullName>7:45 AM</fullName>
            </value>
            <value>
                <fullName>8:00 AM</fullName>
            </value>
            <value>
                <fullName>8:15 AM</fullName>
            </value>
            <value>
                <fullName>8:30 AM</fullName>
            </value>
            <value>
                <fullName>8:45 AM</fullName>
            </value>
            <value>
                <fullName>9:00 AM</fullName>
            </value>
            <value>
                <fullName>9:15 AM</fullName>
            </value>
            <value>
                <fullName>9:30 AM</fullName>
            </value>
            <value>
                <fullName>9:45 AM</fullName>
            </value>
            <value>
                <fullName>10:00 AM</fullName>
            </value>
            <value>
                <fullName>10:15 AM</fullName>
            </value>
            <value>
                <fullName>10:30 AM</fullName>
            </value>
            <value>
                <fullName>10:45 AM</fullName>
            </value>
            <value>
                <fullName>11:00 AM</fullName>
            </value>
            <value>
                <fullName>11:15 AM</fullName>
            </value>
            <value>
                <fullName>11:30 AM</fullName>
            </value>
            <value>
                <fullName>11:45 AM</fullName>
            </value>
            <value>
                <fullName>12:00 PM</fullName>
            </value>
            <value>
                <fullName>12:15 PM</fullName>
            </value>
            <value>
                <fullName>12:30 PM</fullName>
            </value>
            <value>
                <fullName>12:45 PM</fullName>
            </value>
            <value>
                <fullName>1:00 PM</fullName>
            </value>
            <value>
                <fullName>1:15 PM</fullName>
            </value>
            <value>
                <fullName>1:30 PM</fullName>
            </value>
            <value>
                <fullName>1:45 PM</fullName>
            </value>
            <value>
                <fullName>2:00 PM</fullName>
            </value>
            <value>
                <fullName>2:15 PM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>