force-app/main/default/objects/Help_Desk_Ticket__c/fields/Time_of_Arrival__c.field-meta.xml
<CustomField>
    <fullName>Time_of_Arrival__c</fullName>
    <label>Time of Arrival</label>
    <length>50</length>
    <type>Text</type>
</CustomField>