force-app/main/default/objects/Help_Desk_Ticket__c/fields/Time_of_First_Communication__c.field-meta.xml
<CustomField>
    <fullName>Time_of_First_Communication__c</fullName>
    <description>The time when the first communication with the ticket creator took place</description>
    <label>Time of First Communication</label>
    <type>DateTime</type>
</CustomField>