force-app/main/default/objects/Help_Desk_Ticket__c/fields/Time_Opened__c.field-meta.xml
<CustomField>
    <fullName>Time_Opened__c</fullName>
    <formula>if ( Daylight_Savings_Time__c = TRUE, timevalue( Ticket_Opened__c - 5/24), timevalue( Ticket_Opened__c - 6/24))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Opened</label>
    <type>Time</type>
</CustomField>