force-app/main/default/objects/Help_Desk_Ticket__c/fields/Time_Sensitivity__c.field-meta.xml
<CustomField>
    <fullName>Time_Sensitivity__c</fullName>
    <label>Time Sensitivity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Preferred Due Date</fullName>
            </value>
            <value>
                <fullName>Preferred Due Date</fullName>
            </value>
            <value>
                <fullName>Internal/External Deadline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>