force-app/main/default/objects/Help_Desk_Ticket__c/fields/Time_to_First_Response__c.field-meta.xml
<CustomField>
    <fullName>Time_to_First_Response__c</fullName>
    <description>Days between ticket opening and first response</description>
    <formula>if(

isblank(Time_of_First_Communication__c), Date_Time_Closed__c  - CreatedDate, 

if( Time_of_First_Communication__c&gt;Date_Time_Closed__c, Date_Time_Closed__c-CreatedDate, Time_of_First_Communication__c-CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time to First Response</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>