force-app/main/default/objects/Help_Desk_Ticket__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Facilities &amp; Operations</fullName>
            </value>
            <value>
                <fullName>Finance &amp; Accounting</fullName>
            </value>
            <value>
                <fullName>Marketing &amp; Communications</fullName>
            </value>
            <value>
                <fullName>Recurring</fullName>
            </value>
            <value>
                <fullName>Solutions: Salesforce &amp; Data</fullName>
            </value>
            <value>
                <fullName>New Hire Setup, Terminations, Employee Updates</fullName>
            </value>
            <value>
                <fullName>Solutions: Onsite IT &amp; Tech Support</fullName>
            </value>
            <value>
                <fullName>Employee Relations Committee (ERC) Events</fullName>
            </value>
            <value>
                <fullName>Strategic Objective</fullName>
            </value>
            <value>
                <fullName>Annual KPI</fullName>
            </value>
            <value>
                <fullName>One-Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>