force-app/main/default/objects/Help_Desk_Ticket__c/fields/Update_to_Ticket_Creator__c.field-meta.xml
<CustomField>
    <fullName>Update_to_Ticket_Creator__c</fullName>
    <description>This field is where we put the initial update on a ticket. It will trigger an email to be sent to the individual who opened the ticket.</description>
    <inlineHelpText>Please provide a quick update on the status of the ticket within 2 business days.</inlineHelpText>
    <label>Update to Ticket Creator</label>
    <length>2555</length>
    <type>LongTextArea</type>
</CustomField>