force-app/main/default/objects/Help_Desk_Ticket__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Help_Desk_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>