force-app/main/default/objects/Help_Desk_Ticket__c/fields/User_Running_User__c.field-meta.xml
<CustomField>
    <fullName>User_Running_User__c</fullName>
    <formula>if (User__r.Id = $User.Id, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Running User</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>