force-app/main/default/objects/Help_Desk_Ticket__c/fields/Web_Email__c.field-meta.xml
<CustomField>
    <fullName>Web_Email__c</fullName>
    <label>Web Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>