force-app/main/default/objects/Help_Desk_Ticket__c/fields/Web_Name__c.field-meta.xml
<CustomField>
    <fullName>Web_Name__c</fullName>
    <label>Web Name</label>
    <type>TextArea</type>
</CustomField>