force-app/main/default/objects/Help_Desk_Ticket__c/fields/Written_E_Team_Approval_Received__c.field-meta.xml
<CustomField>
    <fullName>Written_E_Team_Approval_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Instating for help desk tickets requesting security camera footage.</description>
    <inlineHelpText>All requests for security camera footage require executive team approval. Please also include the day and time of the event to review as well as any additional helpful detailed information such as clothing the person wore, what happened, etc.</inlineHelpText>
    <label>Written E-Team Approval Received?</label>
    <type>Checkbox</type>
</CustomField>