force-app/main/default/objects/Help_Desk_Ticket__c/recordTypes/ERC.recordType-meta.xml
<RecordType>
    <fullName>ERC</fullName>
    <active>true</active>
    <label>ERC</label>
</RecordType>