force-app/main/default/objects/Help_Desk_Ticket__c/recordTypes/Facilities_Operations.recordType-meta.xml
<RecordType>
    <fullName>Facilities_Operations</fullName>
    <active>true</active>
    <label>Facilities &amp; Operations</label>
</RecordType>